Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignIntObjObjectField.quorum
class Main
    Object v
    Integer t
    action Main
        v:SetValue(5)
        Test(v)
    end

    action Test(Integer var)
    end
end
